real fixed hover on mobile

--- a/index.css
+++ b/index.css
@@ -43,12 +43,14 @@ nav div {
   /* border-right: 1px solid #0c0c0c; */
 }
 
-nav div:hover {
-  background-color: #191919 !important;
+@media (hover: hover) {
+  nav div:hover {
+    background-color: #191919 !important;
+  }
 }
 
-nav div:hover::after {
-  background-color: #2e2e2e !important;
+nav div:first-child {
+  background-color: #0c0c0c;
 }
 
 .section {
